Import of MATJA/Games-IL2Device-Link-0.02 from CPAN.
gitpan-cpan-distribution: Games-IL2Device-Link
gitpan-cpan-version:      0.02
gitpan-cpan-path:         MATJA/Games-IL2Device-Link-0.02.tar.gz
gitpan-cpan-author:       MATJA
gitpan-cpan-maturity:     released

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-07-22  Mathias Jansson  <mj@pfy.nu>
+
+	- 0.02
+
+	* Link.pm: receive buffer now 4x send_size data.
+
 2004-07-13  Mathias Jansson  <mj@pfy.nu>
 
 	* Changed module name.
